# NeuralNetwork

./: .gitignore  CMakeLists.txt  activation.cc  activation.cpp  activation.h  datautil.cc  datautil.h  layer.cc  layer.cpp  layer.h  layer.hpp  lossfunction.cc  lossfunction.cpp  lossfunction.h  lossfunction.hpp  matrix.cc  matrix.cpp  matrix.h  matrix.hpp  neuralnetwork.cc  neuralnetwork.cpp  neuralnetwork.h  neuralnetwork.hpp  test_installation.cc
data/: getdata.py
data/train/: A.csv  AA.csv  AAAU.csv  AACG.csv  AACI.csv  AACIU.csv  AACT-UN.csv  AACT.csv  AADI.csv  AAGH.csv  AAGR.csv  AAIDX.csv  AAL.csv  AAMC.csv  AAME.csv  AAN.csv  AAOI.csv  AAON.csv  AAP.csv  AAPI.csv  AAPL.csv  AAQL.csv  AASP.csv  AAT.csv  AATC.csv  AAUAF.csv  AAUGF.csv  AAWH.csv  AB.csv  ABAT.csv  ABBNY.csv  ABBV.csv  ABCB.csv  ABCFF.csv  ABCL.csv  ABCP.csv  ABEO.csv  ABEV.csv  ABG.csv  ABIO.csv  (+9296 more)
proto/: feedforward.proto
test/: MatrixTest.cc  NeuralNetworkTest.cc
